@@ -198,6 +198,8 @@ if ($pid) {
 		} elseif ($buf === "SYST\r\n") {
 			if (isset($bug27809)) {
 				fputs($s, "215   OS/400 is the remote operating system. The TCP/IP version is \"V5R2M0\"\r\n");
+			} elseif (isset($bug79100)) {
+				// do nothing so test hits timeout
 			} elseif (isset($bug80901)) {
 				fputs($s, "\r\n" . str_repeat("*", 4096) . "\r\n");
 			} else {
